--- a/bio-page/index.html
+++ b/bio-page/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/style.css">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My personal site</title>
   </head>
+
   <body>
-    <h1>Hello, i am Panagiotis Stivaktas 👋</h1>
-    <p>This is my first HTML page!</p>
-  </body>
+  <header>
+    <h1>Hello, I'm Panagiotis Stivaktas 👋</h1>
+    <p>Front-End Web Developer | Passionate about creating clean & interactive websites</p>
+  </header>
+
+  <section class="about">
+    <h2>About Me</h2>
+    <p>I am learning web development and building projects to improve my skills in HTML, CSS, and JavaScript.</p>
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: pan.stivaktas@gmail.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank">Your LinkedIn</a></p>
+    <p>GitHub: <a href="https://github.com/panostiv" target="_blank">Your GitHub</a></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Stivaktas. All rights reserved.</p>
+  </footer>
+</body>
+
 </html>
