--- a/bio-page/index.html
+++ b/bio-page/index.html
@@ -9,10 +9,14 @@
   </head>
 
   <body>
-  <header>
+  <header class="hero">
+  <img src="images/myface.jpg" alt="Profile photo of Panagiotis" class="profile-photo">
+  <div>
     <h1>Hello, I'm Panagiotis Stivaktas 👋</h1>
     <p>Front-End Web Developer | Passionate about creating clean & interactive websites</p>
-  </header>
+  </div>
+</header>
+
 
   <section class="about">
     <h2>About Me</h2>
