--- a/bio-page/index.html
+++ b/bio-page/index.html
@@ -45,14 +45,14 @@
     <p>
       <div class="projects-grid">
       <div class="project-card">
-      <img src="images/project1.jpg" alt="Project 1">
+      <img src="images/portfolio.jpg" alt="Project 1">
       <h3>Personal Portfolio</h3>
       <p>A responsive personal website built with HTML and CSS.</p>
       <a href="https://github.com/panostiv/portfolio" target="_blank">View on GitHub</a>
       </div>
 
       <div class="project-card">
-      <img src="images/project2.jpg" alt="Project 2">
+      <img src="images/coming-soon.jpg" alt="Project 2">
       <h3>Simple Landing Page</h3>
       <p>A clean product landing page created for practice.</p>
       <a href="https://github.com/yourusername/landing-page" target="_blank">View on GitHub</a>
